--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,6 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>22</maven.compiler.source>
         <maven.compiler.target>22</maven.compiler.target>
-        <exec.mainClass>laresvalencia.aa_uc2_233383.Pruebas</exec.mainClass>
+        <exec.mainClass>algoritmos.Pruebas</exec.mainClass>
     </properties>
 </project>
